kubernetes/ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: backend
         # image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.30.0
          image: nginx/nginx-ingress:1.8.0-alpine
          #image: nginx/nginx-ingress:edge
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 5
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 10m
              memory: 20Mi
            requests:
              cpu: 10m
              memory: 20Mi
          #args:
          #  - -default-server-tls-secret=default/default-server-secret
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: backend
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 # tls:
  #- secretName: default-server-secret
  backend:
    serviceName: backend-svc
    servicePort: 80
  rules:
  - host: shawn.info
    http:
      paths:
      - path: /employee
        backend:
          serviceName: employee
          servicePort: 8080
      - path: /department
        backend:
          serviceName: department
          servicePort: 8080
      - path: /organization
        backend:
          serviceName: organization
          servicePort: 8080
